--- a/notebooks/figures/HighK-unimodal.ipynb
+++ b/notebooks/figures/HighK-unimodal.ipynb
@@ -28,7 +28,7 @@
     "from thejoker import JokerSamples\n",
     "\n",
     "from twoface.config import TWOFACE_CACHE_PATH\n",
-    "from twoface.samples_analysis import unimodal_P\n",
+    "from twoface.samples_analysis import unimodal_P, MAP_sample\n",
     "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, NessRG,\n",
     "                        StarResult, Status, JokerRun, initialize_db)\n",
     "from twoface.plot import plot_two_panel, plot_phase_fold, _RV_LBL\n",
@@ -41,6 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plot_path = '../../paper/1-catalog/figures/'\n",
     "table_path = '../../paper/1-catalog/tables/'"
    ]
   },
@@ -55,6 +56,16 @@
     "\n",
     "samples_file = path.join(TWOFACE_CACHE_PATH, 'apogee-jitter.hdf5')\n",
     "mcmc_samples_file = path.join(TWOFACE_CACHE_PATH, 'apogee-jitter-mcmc.hdf5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run = session.query(JokerRun).limit(1).one()\n",
+    "joker_pars = run.get_joker_params()"
    ]
   },
   {
@@ -104,11 +115,11 @@
     "    for star in tqdm.tqdm(high_K_stars):\n",
     "        if star.apogee_id not in f: \n",
     "            unimodal_mcmc.append(False)\n",
-    "            converged_mcmc.append(False)\n",
+    "            converged_mcmc.append(True)\n",
     "            continue\n",
     "        \n",
     "        R = f[star.apogee_id]['chain-stats/gelman_rubin'][:]\n",
-    "        converged_mcmc.append(np.mean(R) < 1.1)\n",
+    "        converged_mcmc.append(np.mean(R) <= 1.1)\n",
     "        \n",
     "        samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
     "\n",
@@ -138,57 +149,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# np.random.seed(123)\n",
-    "np.random.seed(1123)\n",
+    "np.random.seed(123)\n",
     "\n",
+    "rc = {\n",
+    "    'axes.labelsize': 18,\n",
+    "    'xtick.labelsize': 14,\n",
+    "    'ytick.labelsize': 14\n",
+    "}\n",
+    "    \n",
     "rand_subset = np.random.choice(unimodal_converged_idx, size=8, \n",
     "                               replace=False)\n",
     "\n",
-    "fig, axes = plt.subplots(4, 2, figsize=(12, 15), sharex=True)\n",
+    "with mpl.rc_context(rc):\n",
+    "    fig, axes = plt.subplots(4, 2, figsize=(8, 10), sharex=True)\n",
     "\n",
-    "for i, idx in enumerate(rand_subset):\n",
-    "    ax = axes.flat[i]\n",
-    "    \n",
-    "    star = high_K_stars[idx]\n",
-    "    data = star.apogeervdata()\n",
-    "    \n",
-    "    if unimodal_mcmc[idx] & converged_mcmc[idx]:\n",
-    "        fn = mcmc_samples_file\n",
-    "        print('mcmc')\n",
-    "    else:\n",
-    "        fn = samples_file\n",
-    "        print('thejoker')\n",
-    "        \n",
-    "    with h5py.File(fn, 'r') as f:\n",
-    "        samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
-    "        \n",
-    "    samples.t0 = data.t0\n",
-    "        \n",
-    "    fig = plot_phase_fold(data, samples[5], ax=ax, \n",
-    "                          jitter_errorbar=True, label=False)\n",
-    "    xlim = ax.get_xlim()\n",
-    "    ylim = (data.rv.value.min(), data.rv.value.max())\n",
-    "    yspan = ylim[1]-ylim[0]\n",
-    "    ylim = ax.set_ylim(ylim[0]-0.35*yspan, ylim[1]+0.35*yspan)\n",
-    "    \n",
-    "    text = ('{0},    '.format(star.apogee_id) + \n",
-    "            '$P = {0.value:.2f}$ {0.unit:latex},    '.format(np.mean(samples['P'])) + \n",
-    "            '$e = {0:.2f}$'.format(np.mean(samples['e'])))\n",
-    "    ax.text(xlim[0] + (xlim[1]-xlim[0])/20,\n",
-    "            ylim[1] - (ylim[1]-ylim[0])/20,\n",
-    "            text, fontsize=15, va='top', ha='left')\n",
-    "    # _ = plot_two_panel(data, samples)\n",
+    "    for i, idx in enumerate(rand_subset):\n",
+    "        ax = axes.flat[i]\n",
     "\n",
-    "ax.set_xlim(-0.02, 1.02)\n",
+    "        star = high_K_stars[idx]\n",
+    "        data = star.apogeervdata()\n",
+    "\n",
+    "        if unimodal_mcmc[idx] & converged_mcmc[idx]:\n",
+    "            fn = mcmc_samples_file\n",
+    "            print('mcmc')\n",
+    "        else:\n",
+    "            fn = samples_file\n",
+    "            print('thejoker')\n",
+    "\n",
+    "        with h5py.File(fn, 'r') as f:\n",
+    "            samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "\n",
+    "        samples.t0 = data.t0\n",
     "    \n",
-    "for i in [0,1]:\n",
-    "    axes[-1, i].set_xlabel(r'phase, $\\frac{M-M_0}{2\\pi}$')\n",
-    "    \n",
-    "for i in range(4):\n",
-    "    axes[i, 0].set_ylabel(_RV_LBL.format(u.km/u.s))\n",
-    "    \n",
-    "fig.tight_layout()\n",
-    "fig.savefig(path.join(plot_path, 'highK-unimodal.pdf'))"
+    "        sample = MAP_sample(data, samples, joker_pars)\n",
+    "        fig = plot_phase_fold(data, sample, ax=ax, \n",
+    "                              jitter_errorbar=True, label=False)\n",
+    "        xlim = ax.get_xlim()\n",
+    "        ylim = (data.rv.value.min(), data.rv.value.max())\n",
+    "        yspan = ylim[1]-ylim[0]\n",
+    "        ylim = ax.set_ylim(ylim[0]-0.35*yspan, ylim[1]+0.35*yspan)\n",
+    "\n",
+    "        text = ('{0},  '.format(star.apogee_id) + \n",
+    "                '$P = {0.value:.2f}$ {0.unit:latex},  '.format(sample['P']) + \n",
+    "                '$e = {0:.2f}$'.format(sample['e']))\n",
+    "        ax.text(xlim[0] + (xlim[1]-xlim[0])/15,\n",
+    "                ylim[1] - (ylim[1]-ylim[0])/20,\n",
+    "                text, fontsize=10, va='top', ha='left')\n",
+    "        # _ = plot_two_panel(data, samples)\n",
+    "\n",
+    "    ax.set_xlim(-0.02, 1.02)\n",
+    "\n",
+    "    for i in [0,1]:\n",
+    "        axes[-1, i].set_xlabel(r'phase, $\\frac{M-M_0}{2\\pi}$')\n",
+    "\n",
+    "    for i in range(4):\n",
+    "        axes[i, 0].set_ylabel(_RV_LBL.format(u.km/u.s))\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    fig.savefig(path.join(plot_path, 'highK-unimodal.pdf'))"
    ]
   },
   {
@@ -234,8 +252,9 @@
     "            R = np.full(7, np.nan)\n",
     "        \n",
     "        rows['APOGEE_ID'].append(star.apogee_id)\n",
+    "        MAP = MAP_sample(data, samples, joker_pars)\n",
     "        for k in samples.keys():\n",
-    "            rows[k].append(np.median(samples[k]))\n",
+    "            rows[k].append(MAP[k])\n",
     "            rows[k+'_err'].append(1.5 * median_absolute_deviation(samples[k]))\n",
     "            \n",
     "        rows['t0'].append(data.t0.tcb.mjd)\n",
@@ -329,8 +348,8 @@
     "    \n",
     "tbl_with_ness['M1'] = m1\n",
     "tbl_with_ness['M1_err'] = m1_err\n",
-    "tbl_with_ness['M2_min'] = m1\n",
-    "tbl_with_ness['M2_min_err'] = m1_err\n",
+    "tbl_with_ness['M2_min'] = m2_min\n",
+    "tbl_with_ness['M2_min_err'] = m2_min_err\n",
     "\n",
     "tbl_with_ness['M1'].mask = np.isnan(tbl_with_ness['M1'])\n",
     "tbl_with_ness['M1_err'].mask = np.isnan(tbl_with_ness['M1'])\n",
@@ -387,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_catalog.write(path.join(table_path, 'high-K-unimodal.fits'))"
+    "len(full_catalog)"
    ]
   },
   {
@@ -396,7 +415,204 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_catalog[full_catalog.colnames[:18]][:8]"
+    "full_catalog.write(path.join(table_path, 'high-K-unimodal.fits'), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name in full_catalog.colnames[:18] + full_catalog.colnames[33:37]:\n",
+    "    c1 = '\\\\texttt{{{0}}}'.format(name.replace('_', '\\\\_'))\n",
+    "    try:\n",
+    "        c2 = '{0:latex_inline}'.format(full_catalog[name].unit)\n",
+    "    except TypeError:\n",
+    "        c2 = ''\n",
+    "    except AttributeError:\n",
+    "        c2 = ''\n",
+    "    \n",
+    "    if len(c1) < 26:\n",
+    "        c1 = c1 + ' '*(26 - len(c1))\n",
+    "        \n",
+    "    if len(c2) < 24:\n",
+    "        c2 = c2 + ' '*(24 - len(c2))\n",
+    "        \n",
+    "    print('{0} & {1} & <description> \\\\\\\\'.format(c1, c2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_path = '../../plots/emcee_converged'\n",
+    "os.makedirs(_path, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emcee_converged = full_catalog[full_catalog['emcee_converged']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(mcmc_samples_file, 'r') as mcmc_f, h5py.File(samples_file, 'r') as f:\n",
+    "    for row in emcee_converged:\n",
+    "        star = AllStar.get_apogee_id(session, row['APOGEE_ID'])\n",
+    "        data = star.apogeervdata()\n",
+    "    \n",
+    "        if star.apogee_id in mcmc_f:\n",
+    "            samples = JokerSamples.from_hdf5(mcmc_f[star.apogee_id])\n",
+    "            print('mcmc')\n",
+    "        else:\n",
+    "            samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "            print('thejoker')\n",
+    "            \n",
+    "        samples.t0 = data.t0\n",
+    "        \n",
+    "        fig = plot_two_panel(data, samples, \n",
+    "                             plot_data_orbits_kw=dict(n_times=16384,                \n",
+    "                                                      highlight_P_extrema=False))\n",
+    "        fig.axes[0].set_title(star.apogee_id)\n",
+    "        fig.tight_layout()\n",
+    "        fig.savefig(path.join(_path, '{0}.png'.format(star.apogee_id)), dpi=200)\n",
+    "        plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By-eye vetting: these ones are suspicious"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suspicious_ids = ['2M05224382+4300425',\n",
+    "                  '2M08505498+1156503',\n",
+    "                  '2M10264342+1340172',\n",
+    "                  '2M10513288-0250550',\n",
+    "                  '2M14574438+2106271',\n",
+    "                  '2M16131259+5043080',\n",
+    "                  '2M17121495+3211467',\n",
+    "                  '2M17212080+6003296',\n",
+    "                  '2M18571262-0328064',\n",
+    "                  '2M21260907+1100178',\n",
+    "                  '2M21374395+4304268']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "derp = emcee_converged[~np.isin(emcee_converged['APOGEE_ID'], suspicious_ids)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(6,6))\n",
+    "\n",
+    "ax.errorbar(derp['P'], derp['LOGG'],\n",
+    "            xerr=derp['P_err'], yerr=derp['LOGG_ERR'],\n",
+    "            marker='o', linestyle='none', alpha=0.8)\n",
+    "\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_ylim(4., 0)\n",
+    "ax.set_xlabel('P')\n",
+    "ax.set_ylabel('logg')\n",
+    "\n",
+    "# -----\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6,6))\n",
+    "\n",
+    "ax.errorbar(derp['P'], derp['e'],\n",
+    "            xerr=derp['P_err'], yerr=derp['e_err'],\n",
+    "            marker='o', linestyle='none', alpha=0.8)\n",
+    "\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_ylim(0, 1)\n",
+    "ax.set_xlabel('P')\n",
+    "ax.set_ylabel('e')\n",
+    "\n",
+    "# -----\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "\n",
+    "ax = axes[0]\n",
+    "ax.errorbar(derp['M1'], derp['M2_min']/derp['M1'],\n",
+    "            xerr=derp['M1_err'], yerr=np.sqrt(derp['M1_err']**2+derp['M2_min_err']**2),\n",
+    "            marker='o', linestyle='none', alpha=0.8)\n",
+    "ax.set_xlabel('M1')\n",
+    "ax.set_ylabel('M2/M1')\n",
+    "\n",
+    "ax = axes[1]\n",
+    "mass_ratio = derp['M2_min']/derp['M1']\n",
+    "ax.hist(mass_ratio[np.isfinite(mass_ratio)], bins='auto')\n",
+    "ax.set_xlabel('M2/M1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(mcmc_samples_file, 'r') as mcmc_f, h5py.File(samples_file, 'r') as f:\n",
+    "    for row in derp[rc_mask & (derp['P'] < 20)]:\n",
+    "        star = AllStar.get_apogee_id(session, row['APOGEE_ID'])\n",
+    "        data = star.apogeervdata()\n",
+    "    \n",
+    "        if star.apogee_id in mcmc_f:\n",
+    "            samples = JokerSamples.from_hdf5(mcmc_f[star.apogee_id])\n",
+    "            print('mcmc')\n",
+    "        else:\n",
+    "            samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "            print('thejoker')\n",
+    "            \n",
+    "        samples.t0 = data.t0\n",
+    "        \n",
+    "        fig = plot_two_panel(data, samples, \n",
+    "                             plot_data_orbits_kw=dict(n_times=16384,                \n",
+    "                                                      highlight_P_extrema=False))\n",
+    "        fig.axes[0].set_title('P = {0:.2f}'.format(samples['P'][0]))\n",
+    "        fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "derp[rc_mask & (derp['P'] < 20)]"
    ]
   },
   {
@@ -423,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
