--- a/notebooks/figures/HighK.ipynb
+++ b/notebooks/figures/HighK.ipynb
@@ -26,7 +26,7 @@
     "from twoface.config import TWOFACE_CACHE_PATH\n",
     "from twoface.samples_analysis import unimodal_P\n",
     "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar,\n",
-    "                        StarResult, Status, JokerRun, initialize_db)\n",
+    "                        StarResult, Status, JokerRun, NessRG)\n",
     "from twoface.plot import plot_two_panel"
    ]
   },
@@ -38,6 +38,8 @@
    "source": [
     "plot_path = '../../paper/1-catalog/figures/'\n",
     "table_path = '../../paper/1-catalog/tables/'\n",
+    "os.makedirs(plot_path, exist_ok=True)\n",
+    "os.makedirs(table_path, exist_ok=True)\n",
     "\n",
     "Session, _ = db_connect(path.join(TWOFACE_CACHE_PATH, 'apogee.sqlite'))\n",
     "session = Session()\n",
@@ -71,7 +73,8 @@
    "outputs": [],
    "source": [
     "n_martig = session.query(AllStar).join(StarResult).filter(StarResult.high_K).filter(AllStar.martig_filter).count()\n",
-    "print(n_martig)"
+    "n_ness = session.query(AllStar).join(StarResult, NessRG).filter(StarResult.high_K).count()\n",
+    "print(n_martig, n_ness)"
    ]
   },
   {
@@ -94,8 +97,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ranges = [np.arange(3, 9+1, 2), \n",
-    "          np.arange(11, 14+1, 1)]"
+    "def make_plots(q, title, seed=420):\n",
+    "    np.random.seed(seed)\n",
+    "\n",
+    "    ranges = [np.arange(3, 9+1, 2), \n",
+    "              np.arange(11, 14+1, 1)]\n",
+    "\n",
+    "    rc = {\n",
+    "        'axes.labelsize': 18,\n",
+    "        'xtick.labelsize': 14,\n",
+    "        'ytick.labelsize': 14\n",
+    "    }\n",
+    "    \n",
+    "    figs = []\n",
+    "    with mpl.rc_context(rc):\n",
+    "        for k, range_ in enumerate(ranges):\n",
+    "            gs = GridSpec(4, 3)\n",
+    "            fig = plt.figure(figsize=(8., 9.5))\n",
+    "            for j, i in enumerate(range_):\n",
+    "                ax1 = fig.add_subplot(gs[j, :2])\n",
+    "                ax2 = fig.add_subplot(gs[j, 2])\n",
+    "\n",
+    "                if j == 0:\n",
+    "                    ax1.set_title(title, fontsize=20)\n",
+    "\n",
+    "                sub_stars = q.having(func.count(AllVisit.id) == i).all()\n",
+    "                print(len(sub_stars))\n",
+    "\n",
+    "                star = np.random.choice(sub_stars)\n",
+    "                data = star.apogeervdata()\n",
+    "\n",
+    "                with h5py.File(samples_file, 'r') as f:\n",
+    "                    samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "\n",
+    "                fig = plot_two_panel(data, samples, axes=[ax1, ax2], tight=False,\n",
+    "                                     plot_data_orbits_kw=dict(n_times=16384, \n",
+    "                                                              n_orbits=128,\n",
+    "                                                              highlight_P_extrema=False,\n",
+    "                                                              xlim_choice='data',\n",
+    "                                                              relative_to_t0=True,\n",
+    "                                                              plot_kwargs=dict(alpha=0.2, \n",
+    "                                                                               linewidth=0.2,\n",
+    "                                                                               rasterized=True)))\n",
+    "\n",
+    "                xlim = ax1.get_xlim()\n",
+    "                ylim = ax1.get_ylim()\n",
+    "\n",
+    "                ax1.text(xlim[0] + (xlim[1]-xlim[0])/20,\n",
+    "                         ylim[1] - (ylim[1]-ylim[0])/20,\n",
+    "                         star.apogee_id, fontsize=15, va='top', ha='left')\n",
+    "\n",
+    "                ax1.text(xlim[1] - (xlim[1]-xlim[0])/20,\n",
+    "                         ylim[1] - (ylim[1]-ylim[0])/20,\n",
+    "                         '$N = {0}$'.format(len(data)), \n",
+    "                         fontsize=15, va='top', ha='right')\n",
+    "\n",
+    "                ax1.set_xlabel('')\n",
+    "                ax2.set_xlabel('')\n",
+    "\n",
+    "            ax1.set_xlabel(r'${\\rm BMJD} - t_0$ [day]')\n",
+    "            ax2.set_xlabel('period, $P$ [day]')\n",
+    "\n",
+    "            fig.tight_layout()\n",
+    "            fig.subplots_adjust(left=0.125, right=0.95, hspace=0.2, wspace=0.4)\n",
+    "            figs.append(fig)\n",
+    "    return figs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## High-$K$ examples"
    ]
   },
   {
@@ -104,127 +177,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(420)\n",
-    "\n",
-    "stars = high_K_stars\n",
-    "for k, range_ in enumerate(ranges):\n",
-    "    gs = GridSpec(4, 3)\n",
-    "    fig = plt.figure(figsize=(12, 14))\n",
-    "    for j, i in enumerate(range_):\n",
-    "        ax1 = fig.add_subplot(gs[j, :2])\n",
-    "        ax2 = fig.add_subplot(gs[j, 2])\n",
-    "        \n",
-    "        if j == 0:\n",
-    "            ax1.set_title('Examples of high-$K$ stars', fontsize=20)\n",
-    "    \n",
-    "        sub_stars = session.query(AllStar).join(StarResult, AllVisitToAllStar, AllVisit)\\\n",
-    "                           .filter(StarResult.status_id>0)\\\n",
-    "                           .filter(StarResult.high_K)\\\n",
-    "                           .filter(StarResult.status_id == 4)\\\n",
-    "                           .filter(AllStar.logg > 1.5)\\\n",
-    "                           .filter(AllStar.aspcapflag.op('&')(2**7) == 0)\\\n",
-    "                           .group_by(AllStar.apstar_id)\\\n",
-    "                           .having(func.count(AllVisit.id) == i).all()\n",
-    "        print(len(sub_stars))\n",
-    "\n",
-    "        star = np.random.choice(sub_stars)\n",
-    "        data = star.apogeervdata()\n",
-    "\n",
-    "        with h5py.File(samples_file, 'r') as f:\n",
-    "            samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
-    "\n",
-    "        fig = plot_two_panel(data, samples, axes=[ax1, ax2], tight=False,\n",
-    "                             plot_data_orbits_kw=dict(n_times=16384, \n",
-    "                                                      highlight_P_extrema=False,\n",
-    "                                                      xlim_choice='data',\n",
-    "                                                      plot_kwargs=dict(alpha=0.2, \n",
-    "                                                                       rasterized=True)))\n",
-    "        \n",
-    "        xlim = ax1.get_xlim()\n",
-    "        ylim = ax1.get_ylim()\n",
-    "        \n",
-    "        ax1.text(xlim[0] + (xlim[1]-xlim[0])/20,\n",
-    "                 ylim[1] - (ylim[1]-ylim[0])/20,\n",
-    "                 star.apogee_id, fontsize=18, va='top', ha='left')\n",
-    "        \n",
-    "        ax1.text(xlim[1] - (xlim[1]-xlim[0])/20,\n",
-    "                 ylim[1] - (ylim[1]-ylim[0])/20,\n",
-    "                 '$N = {0}$'.format(len(data)), \n",
-    "                 fontsize=18, va='top', ha='right')\n",
-    "        \n",
-    "        ax1.set_xlabel('')\n",
-    "        ax2.set_xlabel('')\n",
-    "    \n",
-    "    ax1.set_xlabel('BMJD')\n",
-    "    ax2.set_xlabel('period, $P$ [day]')\n",
-    "    \n",
-    "    fig.tight_layout()\n",
-    "    fig.savefig(path.join(plot_path, 'highK-{0}.pdf'.format(k)), \n",
+    "q = session.query(AllStar).join(StarResult, AllVisitToAllStar, AllVisit)\\\n",
+    "                          .filter(StarResult.status_id>0)\\\n",
+    "                          .filter(StarResult.high_K)\\\n",
+    "                          .filter(StarResult.status_id == 4)\\\n",
+    "                          .filter(AllStar.logg > 1.5)\\\n",
+    "                          .filter(AllStar.aspcapflag.op('&')(2**7) == 0)\\\n",
+    "                          .group_by(AllStar.apstar_id)\n",
+    "                        \n",
+    "figs = make_plots(q, title='Examples of high-$K$ stars')\n",
+    "for i, fig in enumerate(figs):\n",
+    "    fig.savefig(path.join(plot_path, 'highK-{0}.pdf'.format(i)), \n",
     "                dpi=150, rasterized=True)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Low-$K$ examples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(420)\n",
-    "\n",
-    "stars = low_K_stars\n",
-    "for k, range_ in enumerate(ranges):\n",
-    "    gs = GridSpec(4, 3)\n",
-    "    fig = plt.figure(figsize=(12, 14))\n",
-    "    for j, i in enumerate(range_):\n",
-    "        ax1 = fig.add_subplot(gs[j, :2])\n",
-    "        ax2 = fig.add_subplot(gs[j, 2])\n",
-    "        \n",
-    "        if j == 0:\n",
-    "            ax1.set_title('Examples of low-$K$ stars', fontsize=20)\n",
-    "    \n",
-    "        sub_stars = session.query(AllStar).join(StarResult, AllVisitToAllStar, AllVisit)\\\n",
-    "                           .filter(StarResult.status_id>0)\\\n",
-    "                           .filter(~StarResult.high_K)\\\n",
-    "                           .filter(StarResult.status_id == 4)\\\n",
-    "                           .filter(AllStar.logg > 1.5)\\\n",
-    "                           .filter(AllStar.aspcapflag.op('&')(2**7) == 0)\\\n",
-    "                           .group_by(AllStar.apstar_id)\\\n",
-    "                           .having(func.count(AllVisit.id) == i).all()\n",
-    "        print(len(sub_stars))\n",
-    "\n",
-    "        star = np.random.choice(sub_stars)\n",
-    "        data = star.apogeervdata()\n",
-    "\n",
-    "        with h5py.File(samples_file, 'r') as f:\n",
-    "            samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
-    "\n",
-    "        fig = plot_two_panel(data, samples, axes=[ax1, ax2], tight=False,\n",
-    "                             plot_data_orbits_kw=dict(n_times=16384, \n",
-    "                                                      highlight_P_extrema=False,\n",
-    "                                                      xlim_choice='data',\n",
-    "                                                      plot_kwargs=dict(alpha=0.2, \n",
-    "                                                                       rasterized=True)))\n",
-    "        \n",
-    "        xlim = ax1.get_xlim()\n",
-    "        ylim = ax1.get_ylim()\n",
-    "        \n",
-    "        ax1.text(xlim[0] + (xlim[1]-xlim[0])/20,\n",
-    "                 ylim[1] - (ylim[1]-ylim[0])/20,\n",
-    "                 star.apogee_id, fontsize=18, va='top', ha='left')\n",
-    "        \n",
-    "        ax1.text(xlim[1] - (xlim[1]-xlim[0])/20,\n",
-    "                 ylim[1] - (ylim[1]-ylim[0])/20,\n",
-    "                 '$N = {0}$'.format(len(data)), \n",
-    "                 fontsize=18, va='top', ha='right')\n",
-    "        \n",
-    "        ax1.set_xlabel('')\n",
-    "        ax2.set_xlabel('')\n",
-    "    \n",
-    "    ax1.set_xlabel('BMJD')\n",
-    "    ax2.set_xlabel('period, $P$ [day]')\n",
-    "    \n",
-    "    fig.tight_layout()\n",
-    "    fig.savefig(path.join(plot_path, 'lowK-{0}.pdf'.format(k)), \n",
+    "q = session.query(AllStar).join(StarResult, AllVisitToAllStar, AllVisit)\\\n",
+    "                          .filter(StarResult.status_id>0)\\\n",
+    "                          .filter(~StarResult.high_K)\\\n",
+    "                          .filter(StarResult.status_id == 4)\\\n",
+    "                          .filter(AllStar.logg > 1.5)\\\n",
+    "                          .filter(AllStar.aspcapflag.op('&')(2**7) == 0)\\\n",
+    "                          .group_by(AllStar.apstar_id)\n",
+    "                        \n",
+    "figs = make_plots(q, title='Examples of low-$K$ stars')\n",
+    "for i, fig in enumerate(figs):\n",
+    "    fig.savefig(path.join(plot_path, 'lowK-{0}.pdf'.format(i)), \n",
     "                dpi=150, rasterized=True)"
    ]
   },
@@ -252,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
