table and figure update

--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -909,8 +909,8 @@ Red clump (\RC) stars are horizontal branch stars and have therefore already
 climbed the RGB, where the surface of the star can grow to be several AU in
 size.
 \RC\ stars are therefore expected to less frequently have companions at short
-periods ($P<XX$~day) because the companions would have been engulfed during the
-RGB phase.
+periods ($P<XX$~day) because short period companions would have been
+common-envelope during the RGB phase.
 \figurename~\ref{fig:todo} hints that there is an apparent dearth of
 short-period companions around $\log g \sim 2.5$ (the approximate location of
 the red clump).
